# promptlink

./: LICENSE  README.md  pyproject.toml
promptlink/: __init__.py  main.py  requirements.txt
promptlink/static/: index.html
